--- a/style/index.css
+++ b/style/index.css
@@ -54,7 +54,7 @@
 
 .section-1 {
   margin: 0 auto 0;
-  background: center / cover url("/images/section1bg.jpg") no-repeat;
+  background: center / cover url("../images/section1bg.jpg") no-repeat;
   /*padding: 105px 0 101px;*/
   text-align: center;
   position: relative;
@@ -523,7 +523,7 @@
 .section-7 {
   text-align: center;
 
-  background: center / cover url("/images/background.jpg");
+  background: center / cover url("../images/background.jpg");
   background-size: auto 100%;
 }
 
