--- a/style/index.css
+++ b/style/index.css
@@ -3,21 +3,112 @@
 .container {
   width: min(100% - 40px, 940px);
   margin-inline: auto;
+;
 }
+
 .social-icon {
   gap: 6px;
   width: 14px;
   height: 14px;
 }
-.nav-links {
+.hamburger-menu{
+  display:block;
+}
+
+#menu__toggle {
+  opacity: 0;
+}
+
+.menu__btn {
   display: flex;
-  flex-wrap: wrap;
-  /*flex-direction: column;*/
-  text-transform: uppercase;
-  font-size: 12px;
-  line-height: 20px;
-  color: #404040;
-  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #616161;
+;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+
+.menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  text-align: center;
+  background-color: #ECEFF1;
+  box-shadow: 1px 0 6px rgba(0, 0, 0, .2);
+  z-index: 2;
+}
+
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: #333;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.menu__item:hover {
+  background-color: #CFD8DC;
+}
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  visibility: visible;
+  left: 0;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  transition-duration: .25s;
+}
+.menu__box {
+  transition-duration: .25s;
+}
+.menu__item {
+  margin-left: 50%;
+  transition-duration: .25s;
+}
+.nav-links a {
+  display: none;
+  padding: 4px 17px;
 }
 
 .d-flex {
@@ -27,21 +118,15 @@
 
   /*gap: 40px;*/
 }
-
-.nav-links a {
-  padding: 4px 17px;
-}
-
 .logo-img {
   width: 155px;
   height: 70px;
+  z-index: 3;
 }
-
 .section-1-header {
   padding: 18px 0;
   background: white;
 }
-
 .card {
   background: #e0e0e0;
   width: 200px;
@@ -287,10 +372,10 @@
   flex-direction: column;
   margin-top: 43px;
   align-items: center;
+  align-content: center;
 }
 
 .section-4-1 {
-  min-width: 1024px;
   align-content: center;
   display: flex;
   flex-direction: column;
@@ -594,8 +679,7 @@
 }
 
 .section-7-content-2 {
-  /*padding-top: 20px;*/
-  /*    padding-bottom: 20px;*/
+
   width: 313px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -618,16 +702,13 @@
 }
 
 .section-8-container {
-  /*min-width: 560px;*/
-  /*margin: 0 auto 0;*/
+
   padding-top: 69px;
   padding-bottom: 75px;
 }
 
 .section-8-form {
-  /*min-width: 564px;*/
 
-  /*margin: 0 auto 0;*/
 }
 .section-8-input-1 {
   display: flex;
@@ -681,12 +762,6 @@
   margin-top: 20px;
 }
 
-/*.section-8-button-box {*/
-/*  width: 210px;*/
-/*  margin: 21px auto 0;*/
-/*  height: 53px;*/
-/*}*/
-
 .section-8-close-icon {
   display: block;
   width: 43px;
@@ -706,10 +781,6 @@
 }
 
 @media (min-width: 1024px) {
-  .nav-links {
-    display: flex;
-    flex-direction: row;
-  }
 
   .d-flex {
     justify-content: space-between;
@@ -875,4 +946,25 @@
 }
 
 @media (min-width: 768px) {
+  .hamburger-menu {display: none;
+  }
+  .nav-links a {
+    display: block;
+    padding: 4px 17px;
+  }
+  .nav-links {
+    display: flex;
+    flex-wrap: wrap;
+
+    text-transform: uppercase;
+    font-size: 12px;
+    line-height: 20px;
+    color: #404040;
+
+  }
+
 }
+
+
+
+
